@@ -1,6 +1,6 @@
-/**
+/*
  *
- * Copyright © 2017 Grigory Fedorov, 2017-2019 Florian Schmaus
+ * Copyright © 2017 Grigory Fedorov, 2017-2024 Florian Schmaus
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,12 +17,15 @@
 package org.jivesoftware.smackx.httpfileupload.provider;
 
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.Map;
 
+import org.jivesoftware.smack.packet.IqData;
 import org.jivesoftware.smack.packet.XmlEnvironment;
-import org.jivesoftware.smack.provider.IQProvider;
+import org.jivesoftware.smack.parsing.SmackParsingException.SmackUriSyntaxParsingException;
+import org.jivesoftware.smack.provider.IqProvider;
 import org.jivesoftware.smack.util.ParserUtils;
 import org.jivesoftware.smack.xml.XmlPullParser;
 import org.jivesoftware.smack.xml.XmlPullParserException;
@@ -32,16 +35,18 @@ import org.jivesoftware.smackx.httpfileupload.UploadService;
 import org.jivesoftware.smackx.httpfileupload.element.Slot;
 import org.jivesoftware.smackx.httpfileupload.element.Slot_V0_2;
 
+import org.jxmpp.JxmppContext;
+
 /**
  * Provider for Slot.
  *
  * @author Grigory Fedorov
  * @see <a href="http://xmpp.org/extensions/xep-0363.html">XEP-0363: HTTP File Upload</a>
  */
-public class SlotProvider extends IQProvider<Slot> {
+public class SlotProvider extends IqProvider<Slot> {
 
     @Override
-    public Slot parse(XmlPullParser parser, int initialDepth, XmlEnvironment xmlEnvironment) throws XmlPullParserException, IOException {
+    public Slot parse(XmlPullParser parser, int initialDepth, IqData iqData, XmlEnvironment xmlEnvironment, JxmppContext jxmppContext) throws XmlPullParserException, IOException, SmackUriSyntaxParsingException {
         final String namespace = parser.getNamespace();
 
         final UploadService.Version version = HttpFileUploadManager.namespaceToVersion(namespace);
@@ -62,7 +67,7 @@ public class SlotProvider extends IQProvider<Slot> {
                             switch (version) {
                             case v0_2:
                                 String putUrlString = parser.nextText();
-                                putUrl = new URL(putUrlString);
+                                putUrl = toUrl(putUrlString);
                                 break;
                             case v0_3:
                                 putElementV04Content = parsePutElement_V0_4(parser);
@@ -84,7 +89,7 @@ public class SlotProvider extends IQProvider<Slot> {
                             default:
                                 throw new AssertionError();
                             }
-                            getUrl = new URL(getUrlString);
+                            getUrl = toUrl(getUrlString);
                             break;
                     }
                     break;
@@ -113,7 +118,7 @@ public class SlotProvider extends IQProvider<Slot> {
         final int initialDepth = parser.getDepth();
 
         String putUrlString = parser.getAttributeValue(null, "url");
-        URL putUrl = new URL(putUrlString);
+        URL putUrl = URI.create(putUrlString).toURL();
 
         Map<String, String> headers = null;
         outerloop: while (true) {
